Subscribe-right в процессе

--- a/brand/index.html
+++ b/brand/index.html
@@ -138,14 +138,32 @@
         <section class="subscription">
             <div class="subscription-left">
                 <img src="./img/avatar.png" alt="" class="avatar">
-                <p>"Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                <p id="subscription-left-quote">"Vestibulum quis porttitor dui! Quisque viverra nunc mi,
                     a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium"</p>
-                <p></p>
-                <p></p>
+                <p id="subscription-left-name">Bin Burhan</br>
+                <span>Dhaka, Bd</span></p>
+            </div>
+            <div class="subscription-right">
+                <p>Subscribe </br>
+                <span>FOR OUR NEWLETTER AND PROMOTION</span></p>
+                <div class="subscribe-btn">
+                    <div class="subscribe-btn-left">
+                        <span>Enter Your Email</span>
+                    </div>
+                    <div class="subscribe-btn-right">
+                        <span>Subscribe</span>
+                    </div>
+                </div>
             </div>
         </section>
 
         <div class="clearfix"></div>
+
+        <section class="brandInfoSection">
+            <div class="brand-info-left"></div>
+            <div class="brand-info-right"></div>
+        </section>
+
         <div class="footer"></div>
     </div>
 </body>
