--- a/homework1/index.html
+++ b/homework1/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Semantic tags</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <article></article>
+        </div>
+        <div class="main">
+
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
 </body>
 </html>
