--- a/homework1/index.html
+++ b/homework1/index.html
@@ -4,20 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Semantic tags</title>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <article></article>
-        </div>
-        <div class="main">
+        <section class="product">
+            <div class="header">
+                <article class="headerArticle">
+                    <h1>Product name</h1>
+                    <ul class="headerList">
+                        <li>
+                            Put on this page information about your product
+                        </li>
+                        <li>
+                            A detailed description of your product
+                        </li>
+                        <li>
+                            Tell us about the advantages and merits
+                        </li>
+                        <li>
+                            Associate the page with the payment system
+                        </li>
+                    </ul>
+                </article>
+                <div class="headerImage"></div>
+            </div>
+            <main>
+                <article class="aboutProductArticle">
+                    <div class="aboutProductArticleText">
+                        <h2>About your product</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.
+                        </p>
+                        <p>
+                            Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.
+                        </p>
+                    </div>
+                    <div class="aboutProductArticleVideo">
+                        <video width="430" height="245" poster="./img/videoPoster.png"></video>
+                    </div>
+                </article>
+                <article class="productFeatureArticle">
+                    <h2>Dignity and pluses product</h2>
+                </article>
+                <article class="productScreenshots">
+                    <h2>Screenshots</h2>
+                </article>
+            </main>
+        </section>
 
-        </div>
-        <div class="footer">
+        <section class="contacts">
+            <h2>Contacts</h2>
+            <form action="">
 
-        </div>
+            </form>
+            <div class="contactsInfo">
+
+            </div>
+            <div class="footer">
+                <p>
+                    Copyright &copy;&nbsp;2014 Product name 
+                    &middot; PSD HTML&nbsp;CSS
+                </p>
+            </div>
+        </section>
+
     </div>
+
 </body>
 </html>
