Блок Price в работе

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -48,8 +48,91 @@
                 <article class="productFeatureArticle">
                     <h2>Dignity and pluses product</h2>
                 </article>
-                <article class="productScreenshots">
+                <article class="productScreenshotsArticle">
                     <h2>Screenshots</h2>
+                    <article class="screenshotArticle scr1">
+                        <img src="./img/screenshotArticle.png" alt="Product screenshot">
+                        <h3>The description for the image</h3>
+                        <p>
+                            Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.                            
+                        </p>
+                    </article>
+                    <article class="screenshotArticle scr2">
+                        <img src="./img/screenshotArticle.png" alt="Product screenshot">
+                        <h3>The description for the image</h3>
+                        <p>
+                            Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.                            
+                        </p>
+                    </article>
+                    <article class="screenshotArticle scr3">
+                        <img src="./img/screenshotArticle.png" alt="Product screenshot">
+                        <h3>The description for the image</h3>
+                        <p>
+                            Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.                            
+                        </p>
+                    </article>
+                    <article class="screenshotArticle scr4">
+                        <img src="./img/screenshotArticle.png" alt="Product screenshot">
+                        <h3>The description for the image</h3>
+                        <p>
+                            Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.                            
+                        </p>
+                    </article>
+                </article>
+                <article class="productReviewArticle">
+                    <h2>Reviews</h2>
+                    <article class="reviewArticle review1">
+                        <img src="./img/userpic.png" alt="user avatar">
+                        <div class="userReview">
+                            <p>
+                                Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="reviewArticle review2">
+                        <img src="./img/userpic.png" alt="user avatar">
+                        <div class="userReview">
+                            <p>
+                                Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="reviewArticle review3">
+                        <img src="./img/userpic.png" alt="user avatar">
+                        <div class="userReview">
+                            <p>
+                                Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                            </p>
+                        </div>
+                    </article>
+                    <article class="reviewArticle review4">
+                        <img src="./img/userpic.png" alt="user avatar">
+                        <div class="userReview">
+                            <p>
+                                Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
+                            </p>
+                        </div>
+                    </article>
+                </article>
+                <article class="productPriceArticle">
+                    <h2>Buy it now</h2>
+                    <article class="priceArticle standartPrice">
+                        <h3>Standart</h3>
+                        <p class="priceAmount">$100</p>
+                        <ol>
+                            <li>Porro officia cumque sint deleniti;</li>
+                            <li>Тemo facere rem vitae odit;</li>
+                            <li>Cum odio, iste quia doloribus autem;</li>
+                            <li>Aperiam nulla ea neque.</li>
+                        </ol>
+                        <button>BUY</button>
+                    </article>
+                    <article class="priceArticle premiumPrice">
+
+                    </article>
+                    <article class="priceArticle luxPrice">
+
+                    </article>
                 </article>
             </main>
         </section>
