Блок feature не выровнен, блок footer начал

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -47,6 +47,28 @@
                 </article>
                 <article class="productFeatureArticle">
                     <h2>Dignity and pluses product</h2>
+                    <div class="productFeatureWrap">
+                        <ul>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+                            </li>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p> 
+                            </li>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+                            </li>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+                            </li>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+                            </li>
+                            <li>
+                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </article>
                 <article class="productScreenshotsArticle">
                     <h2>Screenshots</h2>
@@ -116,23 +138,53 @@
                 </article>
                 <article class="productPriceArticle">
                     <h2>Buy it now</h2>
-                    <article class="priceArticle standartPrice">
-                        <h3>Standart</h3>
-                        <p class="priceAmount">$100</p>
-                        <ol>
-                            <li>Porro officia cumque sint deleniti;</li>
-                            <li>Тemo facere rem vitae odit;</li>
-                            <li>Cum odio, iste quia doloribus autem;</li>
-                            <li>Aperiam nulla ea neque.</li>
-                        </ol>
-                        <button>BUY</button>
-                    </article>
-                    <article class="priceArticle premiumPrice">
-
-                    </article>
-                    <article class="priceArticle luxPrice">
-
-                    </article>
+                    <div class="priceArticleWrap">
+                        <article class="priceArticle standartPrice">
+                            <h3>Standart</h3>
+                            <p class="priceAmount">$100</p>
+                            <ol>
+                                <li>Porro officia cumque sint deleniti;</li>
+                                <li>Тemo facere rem vitae odit;</li>
+                                <li>Cum odio, iste quia doloribus autem;</li>
+                                <li>Aperiam nulla ea neque.</li>
+                            </ol>
+                            <button>BUY</button>
+                        </article>
+                        <article class="priceArticle premiumPrice">
+                            <h3>Premium</h3>
+                            <p class="priceAmount">$150</p>
+                            <ol>
+                                <li>Porro officia cumque sint deleniti;</li>
+                                <li>Тemo facere rem vitae odit;</li>
+                                <li>Cum odio, iste quia doloribus autem;</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                            </ol>
+                            <button>BUY</button>
+                        </article>
+                        <article class="priceArticle luxPrice">
+                            <h3>Lux</h3>
+                            <p class="priceAmount">$200</p>
+                            <ol>
+                                <li>Porro officia cumque sint deleniti;</li>
+                                <li>Тemo facere rem vitae odit;</li>
+                                <li>Cum odio, iste quia doloribus autem;</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                                <li>Aperiam nulla ea neque.</li>
+                            </ol>
+                            <button>BUY</button>
+                        </article>
+                    </div>
                 </article>
             </main>
         </section>
