Завершил footer, feedback form. Осталось раздел контактов и переделать feature

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -191,13 +191,20 @@
 
         <section class="contacts">
             <h2>Contacts</h2>
-            <form action="">
-
-            </form>
-            <div class="contactsInfo">
-
+            <div class="contactsFormWrap">
+                <div class="contactsForm">
+                    <form action="">
+                        <input name="name" placeholder="Your name:" class="name" required />
+                        <input name="email" placeholder="Your email:" class="email" type="email" required />
+                        <textarea rows="4" cols="50" name="subject" placeholder="Your message:" class="message" required></textarea>
+                        <input name="submit" class="btn" type="submit" value="Send" />
+                    </form>
+                </div>
+                <div class="contactsInfo">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis suscipit, debitis ullam quam nam architecto aspernatur ratione natus quae iure!
+                </div>
             </div>
-            <div class="footer">
+            <div class="copyright">
                 <p>
                     Copyright &copy;&nbsp;2014 Product name 
                     &middot; PSD HTML&nbsp;CSS
