--- a/homework1/index.html
+++ b/homework1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Semantic tags</title>
 </head>
@@ -201,7 +202,23 @@
                     </form>
                 </div>
                 <div class="contactsInfo">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis suscipit, debitis ullam quam nam architecto aspernatur ratione natus quae iure!
+                    <div class="contactOption">
+                        <img src="./img/skype_icon.png" alt="skype">
+                        <p>here_your_login_skype</p>
+                    </div>
+                    <div class="contactOption">
+                        <img src="./img/icq_icon.png" alt="icq">
+                        <p>279679659</p>
+                    </div>
+                    <div class="contactOption">
+                        <img src="./img/email_icon.png" alt="email">
+                        <p>psdhtmlcss@mail.ru</p>
+                    </div>
+                    <div class="contactOption">
+                        <img src="./img/phone_icon.png" alt="phone">
+                        <p>80 00 4568 55 55</p>
+                    </div>
+                    <a class="socialButtons"><img src="./img/socialBtn.png" alt="social networks"></a>
                 </div>
             </div>
             <div class="copyright">
