Доделана секция feature

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -48,27 +48,47 @@
                 </article>
                 <article class="productFeatureArticle">
                     <h2>Dignity and pluses product</h2>
-                    <div class="productFeatureWrap">
-                        <ul>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-                            </li>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p> 
-                            </li>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-                            </li>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-                            </li>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-                            </li>
-                            <li>
-                                <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-                            </li>
-                        </ul>
+                    <div class="productFeatureWrap1">
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="productFeatureWrap2">
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="productFeatureWrap3">
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
+                        <div class="feature">
+                            <img src="./img/featureMarker.png" alt="feature">
+                            <p>
+                                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+                            </p>
+                        </div>
                     </div>
                 </article>
                 <article class="productScreenshotsArticle">
