Переделал по результатам проверки: корректировки article --> div там где нет заголовка, убрал закрывающие слэши в одиночных тегах input

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -48,7 +48,7 @@
                 </article>
                 <article class="productFeatureArticle">
                     <h2>Dignity and pluses product</h2>
-                    <div class="productFeatureWrap1">
+                    <div class="productFeatureWrap">
                         <div class="feature">
                             <img src="./img/featureMarker.png" alt="feature">
                             <p>
@@ -62,7 +62,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="productFeatureWrap2">
+                    <div class="productFeatureWrap">
                         <div class="feature">
                             <img src="./img/featureMarker.png" alt="feature">
                             <p>
@@ -76,7 +76,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="productFeatureWrap3">
+                    <div class="productFeatureWrap">
                         <div class="feature">
                             <img src="./img/featureMarker.png" alt="feature">
                             <p>
@@ -124,38 +124,38 @@
                 </article>
                 <article class="productReviewArticle">
                     <h2>Reviews</h2>
-                    <article class="reviewArticle review1">
+                    <div class="reviewArticle review1">
                         <img src="./img/userpic.png" alt="user avatar">
                         <div class="userReview">
                             <p>
                                 Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                             </p>
                         </div>
-                    </article>
-                    <article class="reviewArticle review2">
+                    </div>
+                    <div class="reviewArticle review2">
                         <img src="./img/userpic.png" alt="user avatar">
                         <div class="userReview">
                             <p>
                                 Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                             </p>
                         </div>
-                    </article>
-                    <article class="reviewArticle review3">
+                    </div>
+                    <div class="reviewArticle review3">
                         <img src="./img/userpic.png" alt="user avatar">
                         <div class="userReview">
                             <p>
                                 Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                             </p>
                         </div>
-                    </article>
-                    <article class="reviewArticle review4">
+                    </div>
+                    <div class="reviewArticle review4">
                         <img src="./img/userpic.png" alt="user avatar">
                         <div class="userReview">
                             <p>
                                 Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                             </p>
                         </div>
-                    </article>
+                    </div>
                 </article>
                 <article class="productPriceArticle">
                     <h2>Buy it now</h2>
@@ -215,10 +215,10 @@
             <div class="contactsFormWrap">
                 <div class="contactsForm">
                     <form action="">
-                        <input name="name" placeholder="Your name:" class="name" required />
-                        <input name="email" placeholder="Your email:" class="email" type="email" required />
+                        <input name="name" placeholder="Your name:" class="name" required>
+                        <input name="email" placeholder="Your email:" class="email" type="email" required>
                         <textarea rows="4" cols="50" name="subject" placeholder="Your message:" class="message" required></textarea>
-                        <input name="submit" class="btn" type="submit" value="Send" />
+                        <input name="submit" class="btn" type="submit" value="Send">
                     </form>
                 </div>
                 <div class="contactsInfo">
