--- a/homework2/index.html
+++ b/homework2/index.html
@@ -156,53 +156,65 @@
 					<div class="reviewBox">
 						<img src="./img/userpic.png" alt="user avatar">
 						<div class="userReview">
-							<blockquote>
-								<p>
-									Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
-									autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
-									commodi consectetur?
-								</p>
-								<p class="author">Lourens S.</p>
-							</blockquote>
+							<div class="citeAddon"></div>
+							<div class="cite">
+								<blockquote>
+									<p>
+										Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
+										autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
+										commodi consectetur?
+									</p>
+									<p class="author">Lourens S.</p>
+								</blockquote>
+							</div>
 						</div>
 					</div>
 					<div class="reviewBox">
 						<img src="./img/userpic.png" alt="user avatar">
 						<div class="userReview">
-							<blockquote>
-								<p>
-									Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
-									autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
-									commodi consectetur?
-								</p>
-								<p class="author">Lourens S.</p>
-							</blockquote>
+							<div class="citeAddon"></div>
+							<div class="cite">
+								<blockquote>
+									<p>
+										Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
+										autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
+										commodi consectetur?
+									</p>
+									<p class="author">Lourens S.</p>
+								</blockquote>
+							</div>
 						</div>
 					</div>
 					<div class="reviewBox">
 						<img src="./img/userpic.png" alt="user avatar">
 						<div class="userReview">
-							<blockquote>
-								<p>
-									Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
-									autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
-									commodi consectetur?
-								</p>
-								<p class="author">Lourens S.</p>
-							</blockquote>
+							<div class="citeAddon"></div>
+							<div class="cite">
+								<blockquote>
+									<p>
+										Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
+										autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
+										commodi consectetur?
+									</p>
+									<p class="author">Lourens S.</p>
+								</blockquote>
+							</div>
 						</div>
 					</div>
 					<div class="reviewBox">
 						<img src="./img/userpic.png" alt="user avatar">
 						<div class="userReview">
-							<blockquote>
-								<p>
-									Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
-									autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
-									commodi consectetur?
-								</p>
-								<p class="author">Lourens S.</p>
-							</blockquote>
+							<div class="citeAddon"></div>
+							<div class="cite">
+								<blockquote>
+									<p>
+										Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus
+										autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus
+										commodi consectetur?
+									</p>
+									<p class="author">Lourens S.</p>
+								</blockquote>
+							</div>
 						</div>
 					</div>
 				</div>
