--- a/homework2/index.html
+++ b/homework2/index.html
@@ -48,7 +48,8 @@
 					</p>
 				</div>
 				<div class="aboutRight">
-					<video width="430" height="245" controls="controls" poster="./img/aboutVideoCapture.png"></video>
+					<iframe width="430" height="245" src="https://www.youtube.com/embed/1GkA0h1R0VI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<!-- <video src="https://www.youtube.com/watch?v=1GkA0h1R0VI" width="430" height="245" controls="controls" poster="./img/aboutVideoCapture.png"></video> -->
 				</div>
 			</section>
 			<section class="feature">
