Фиксы стилей, проверил в валидаторе

--- a/homework2/index.html
+++ b/homework2/index.html
@@ -48,8 +48,7 @@
 					</p>
 				</div>
 				<div class="aboutRight">
-					<iframe width="430" height="245" src="https://www.youtube.com/embed/1GkA0h1R0VI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<!-- <video src="https://www.youtube.com/watch?v=1GkA0h1R0VI" width="430" height="245" controls="controls" poster="./img/aboutVideoCapture.png"></video> -->
+					<iframe width="430" height="245" src="https://www.youtube.com/embed/1GkA0h1R0VI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
 			<section class="feature">
@@ -277,7 +276,7 @@
 				<h2>Contacts</h2>
 				<div class="contactsFormWrap">
 					<div class="contactsForm">
-						<form action="">
+						<form action="submit">
 							<input name="name" placeholder="Your name:" class="name" required>
 							<input name="email" placeholder="Your email:" class="email" type="email" required>
 							<textarea rows="4" cols="50" name="subject" placeholder="Your message:" class="message"
