--- a/homework3-1/index.html
+++ b/homework3-1/index.html
@@ -3,18 +3,70 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./libs/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./styles/style.css">
 	<title>Video</title>
 </head>
 <body>
-	<div class="videoIn"></div>
-	<video src="./video/forest.mp4" autoplay muted></video>
-	<div class="container">
-		<div class="header">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, numquam consectetur eligendi omnis dolorum facere magnam nihil iste cumque ipsa?</div>
-		<div class="main">
-			<div class="box"></div>
-		</div>
-		<footer></footer>
+	<div class="bgVideo">
+		<div class="videoIn"></div>
+		<video src="./video/forest.mp4" autoplay muted loop></video>
 	</div>
+	<div class="container-fluid header">
+		<div class="row">
+			<div class="col-xl-4 col-lg-4 col-md-6 col-sm-8 col-12 offset-xl-4 offset-lg-4 offset-md-3 offset-sm-0">
+				<form class="formReg">
+					<div class="form-group">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Password</label>
+						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					</div>
+					<div class="form-group form-check">
+						<input type="checkbox" class="form-check-input" id="exampleCheck1">
+						<label class="form-check-label" for="exampleCheck1">Check me out</label>
+					</div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid carouselMain">
+		<div class="row">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+					<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="./img/carousel1.jpg" class="d-block w-100" alt="image 1">
+					</div>
+					<div class="carousel-item">
+						<img src="./img/carousel2.jpg" class="d-block w-100" alt="image 2">
+					</div>
+					<div class="carousel-item">
+						<img src="./img/carousel3.jpg" class="d-block w-100" alt="image 3">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+	</div>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./libs/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
